kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp-deployment
  labels:
    app: vproapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      name: vproapp
      labels:
        app: vproapp
    spec:
      containers:
        - name: vproapp
          image:  masterdevopscloud/vprofileapp
          ports:
          - name:  vproapp-port
            containerPort: 8080
            protocol: TCP
