kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb-deployment
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      name: vprodb
      labels:
        app: vprodb
    spec:
      containers:
        - name: vprodb
          image: masterdevopscloud/vprofiledb
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: vprodb-data
          ports:
            - name: vprodb-port
              containerPort: 3306
      volumes:
        - name:  vprodb-data
          persistentVolumeClaim:
            claimName: db-pvc
