kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq-deployment
  labels:
    app: vprormq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprormq
  template:
    metadata:
      name: vprormq
      labels:
        app: vprormq
    spec:
      containers:
        - name: vprormq
          image: rabbitmq
          ports:
          - name:  vprormq-port
            containerPort:  5672
