kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata: 
  name: vprodb
  labels:
    app: vprodb
spec:
  selector:
    app: vprodb
  type: ClusterIP
  ports:
  - targetPort: vprodb-port
    port: 3306
    protocol: TCP
