kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  labels:
    app: vpromc
spec:
  selector:
    app: vpromc
  type: ClusterIP
  ports:
  - targetPort:  vpromc-port
    port:  11211
    protocol: TCP
