kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
  labels:
    app: vprormq
spec:
  selector:
    app: vprormq
  type: ClusterIP
  ports: 
    - targetPort: vprormq-port
      port: 5672
      protocol: TCP
