kubedefs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: vprofile.rcginfo.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vproapp
                port:
                  number: 8080
